@@ -22,10 +22,11 @@
 #ifndef __GIMP_VECTORS_NEW_H__
 #define __GIMP_VECTORS_NEW_H__
 
-GimpStroke *
-gimp_stroke_new_from_coords (GimpVectorsStrokeType  type,
-                             const GimpCoords      *coords,
-                             gint                   n_coords,
-                             gboolean               closed);
+
+GimpStroke * gimp_stroke_new_from_coords (GimpVectorsStrokeType  type,
+                                          const GimpCoords      *coords,
+                                          gint                   n_coords,
+                                          gboolean               closed);
+
 
 #endif /* __GIMP_VECTORS_NEW_H__ */
